--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_GOOGLE_MAP_API=AIzaSyDz4_lORmoUdOKmYIe0iYEgnrhIV-pEzeQ
-VITE_PLAYBACK_API=http://54.37.225.65:3001/api/packets/parsed
+VITE_API_BASE_URL=http://54.37.225.65:3020
+VITE_FLEET_WS_URL=wss://api.example.com/ws/fleet
