--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_GOOGLE_MAP_API=AIzaSyDz4_lORmoUdOKmYIe0iYEgnrhIV-pEzeQ
-VITE_API_BASE_URL=http://54.37.225.65:3020
-VITE_FLEET_WS_URL=wss://api.example.com/ws/fleet
+VITE_API_BASE_URL=http://54.37.225.65:4020
+VITE_WS_URL=http://54.37.225.65:4020
