feat: Implement date range filtering for saved videos and add local environment variable comments.

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_GOOGLE_MAP_API=AIzaSyDz4_lORmoUdOKmYIe0iYEgnrhIV-pEzeQ
-VITE_API_BASE_URL=http://54.37.225.65:4020
-VITE_WS_URL=http://54.37.225.65:4020
+ VITE_API_BASE_URL=http://54.37.225.65:4020
+ VITE_WS_URL=http://54.37.225.65:4020
+# VITE_API_BASE_URL=http://0.0.0.0:4020
+# VITE_WS_URL=http://0.0.0.0:4020
